# Air_Quality

./: app.py  dashboard.py  label_encoder.pkl  pyproject.toml  requirements.txt  start.sh
backend/: .gitignore  app.py  dashboard.py  model_aer.pkl  start.sh
frontend/: package-lock.json
frontend/app/: page.tsx
