[project]
name = "proiect-aer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "joblib>=1.5.3",
    "numpy>=2.5.1",
    "panel>=1.9.3",
    "requests>=2.34.2",
    "scikit-learn==1.6.1",
    "tornado>=6.5.7",
]
